--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8091
 
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/demo
+datasource.url=jdbc:mysql://localhost:3306/document_manager
 datasource.username=root
