--- a/document-service/build.gradle
+++ b/document-service/build.gradle
@@ -33,12 +33,16 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.7.RELEASE'
-// https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
     compile 'mysql:mysql-connector-java:5.1.40'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-//    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    //    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
     compile 'com.google.code.gson:gson:2.8.0'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-test
+    compile group: 'org.springframework', name: 'spring-test', version: '4.3.7.RELEASE'
+
 
 }
