--- a/shareservice/src/main/resources/application.properties
+++ b/shareservice/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8097
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 datasource.url=jdbc:mysql://35.187.208.148:3306/document_manager?useUnicode=yes&characterEncoding=UTF-8
 datasource.username=user3
+
+info.app.name=share service 
+info.app.description=This is share service
+info.app.version=1.0.0
