edit department service

--- a/department-service/build.gradle
+++ b/department-service/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 // https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
 	compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
 	compile 'mysql:mysql-connector-java:5.1.40'
+	compile 'com.moelholm:prometheus-spring-boot-starter:1.0.1'
 }
