--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8091
 
 #datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #server cloud
-datasource.url=jdbc:mysql://localhost:3306/department_service?useUnicode=yes&characterEncoding=UTF-8
-datasource.username=root
+#datasource.url=jdbc:mysql://35.187.208.148:3306/department_service?useUnicode=yes&characterEncoding=UTF-8
+#datasource.username=user2
 
 #mypc
-#datasource.url=jdbc:mysql://35.187.208.148:3306/document_manager?useUnicode=yes&characterEncoding=UTF-8
-#datasource.username=user3
+datasource.url=jdbc:mysql://35.187.208.148:3306/department_service?useUnicode=yes&characterEncoding=UTF-8
+datasource.username=user3
