--- a/mediatype.yml
+++ b/mediatype.yml
@@ -84,6 +84,7 @@ token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VybmFtZSI6InVzZXIiLCJwYXNzd29yZCI6InVzZXIifQ.p
 title: Sample Document
 description: Sample Document Description
 tag: general
+user_id: 2
 
 # [Response]
 # Success
