--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath  'mysql:mysql-connector-java:5.1.40'
+
 	}
 }
 
@@ -32,4 +33,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
 	compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
 	compile 'mysql:mysql-connector-java:5.1.40'
+	compile 'org.json:json:20160212'
+	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 }
