--- a/shareservice/build.gradle
+++ b/shareservice/build.gradle
@@ -36,5 +36,5 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator:1.5.2.RELEASE'
 	// https://mvnrepository.com/artifact/com.moelholm/prometheus-spring-boot-starter
 	compile group: 'com.moelholm', name: 'prometheus-spring-boot-starter', version: '1.0.1'
-
+	compile('org.json:json')
 }
