--- a/mediatype.yml
+++ b/mediatype.yml
@@ -221,10 +221,23 @@ departmentId: 3
 # [Response]
 # Success
 success:
-  message: Document has been shared to Human Resource department.
-# Error
+  message: This document has been shared to Human Resource department.
+  
+# Error when document don't have in database
 error:
-  message: Document cannot be shared to Human Resource department.
+  message: Unknown document.
+# Error when department don't have in database
+error:
+  message: Unknown department.
+# Error when department and document don't have in database
+error:
+  message: Unknown document and department.
+# Error when department is owner of document.
+error:
+  message: Human Resource department is a owner of this document.
+# Error when department is already shared.
+error:
+  message: This document is already shared to Human Resource department.
 
 # DELETE /documents/:id/shares
 # Revoke sharing from a document
@@ -235,10 +248,25 @@ departmentId: 3
 # [Response]
 # Success
 success:
-  message: Document has been revoked from Human Resource department.
-# Error
+  message: This document has been revoked from Human Resource department.
+# Error when document don't have in database
 error:
-  message: Document cannot be revoked from Human Resource department.
+  message: Unknown document.
+# Error when department don't have in database
+error:
+  message: Unknown department.
+# Error when department and document don't have in database
+error:
+  message: Unknown document and department.
+# Error when department is owner of document.
+error:
+  message: Human Resource department is a owner of this document.
+# Error when document does not share to any department.
+error:
+  message: This document does not share to any department.
+# Error when department is not shared to document.
+error:
+  message: This document does not share to Human Resource department.
 
 ##################
 # Department API #
