--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -36,5 +36,6 @@ dependencies {
 	compile 'org.json:json:20160212'
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	compile 'com.moelholm:prometheus-spring-boot-starter:1.0.1'
 
 }
