fix datasource in application.properties

--- a/shareservice/src/main/resources/application.properties
+++ b/shareservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8097
 
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/document_manager?useUnicode=yes&characterEncoding=UTF-8
+datasource.url=jdbc:mysql://localhost:3306/share_service?useUnicode=yes&characterEncoding=UTF-8
 datasource.username=user2
 
 info.app.name=share service 
