fix datasource again

--- a/shareservice/src/main/resources/application.properties
+++ b/shareservice/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8097
 
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/share_service?useUnicode=yes&characterEncoding=UTF-8
+datasource.url=jdbc:mysql://localhost:3306/shares_service?useUnicode=yes&characterEncoding=UTF-8
 datasource.username=user2
 
-info.app.name=share service 
+info.app.name=shares service 
 info.app.description=This is share service
 info.app.version=1.0.0
