--- a/mediatype.yml
+++ b/mediatype.yml
@@ -278,6 +278,20 @@ error:
 # Error when department is not shared to document.
 error:
   message: This document does not share to Human Resource department.
+  
+# DELETE /documents/:id/shares/all
+# Revoke all sharing from a document
+
+# [Response]
+success:
+  message : This document has been revoked from all departments.
+# Error when document don't have in database
+error:
+  message: Unknown document.
+# Error when document does not share to any department.
+error:
+  message: This document does not share to any department.
+
 
 ##################
 # Department API #
