--- a/shareservice/src/main/resources/application.properties
+++ b/shareservice/src/main/resources/application.properties
@@ -5,5 +5,5 @@ datasource.url=jdbc:mysql://localhost:3306/shares_service?useUnicode=yes&charact
 datasource.username=user2
 
 info.app.name=shares service 
-info.app.description=This is share service
+info.app.description=This is shares service
 info.app.version=1.0.0
