fix api putSelfUserUpdate and putSelfPasswordUpdate

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ server.port=8092
 #datasource.username=root
 
 #mypc
-datasource.url=jdbc:mysql://35.187.208.148:3306/users_service?useUnicode=yes&characterEncoding=UTF-8
-datasource.username=user3
+datasource.url=jdbc:mysql://localhost:3306/users_service?useUnicode=yes&characterEncoding=UTF-8
+datasource.username=user2
