--- a/files-service/src/main/resources/application.properties
+++ b/files-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.port=8099
 #mypc
 datasource.url=jdbc:mysql://35.187.208.148:3306/files_service?useUnicode=yes&characterEncoding=UTF-8
 datasource.username=user3
+
+spring.http.multipart.max-file-size=25600KB
+spring.http.multipart.max-request-size=25600KB
