--- a/shareservice/src/main/resources/application.properties
+++ b/shareservice/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8097
 
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/shares_service?useUnicode=yes&characterEncoding=UTF-8
-datasource.username=user2
+datasource.url=jdbc:mysql://35.187.208.148:3306/shares_service?useUnicode=yes&characterEncoding=UTF-8
+datasource.username=user3
 
 info.app.name=shares service 
 info.app.description=This is shares service
