--- a/mediatype.yml
+++ b/mediatype.yml
@@ -408,6 +408,7 @@ message: Your information has been updated!
 # [Request]
 id: 11
 # [Response]
+password: 123456
 message: Password has reset!
 
 ############
